[FIX] tiki-installer: buttons overlapping on the last step of the installer

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -4920,6 +4920,8 @@ h2:hover .heading-link, h3:hover .heading-link, h4:hover .heading-link, h5:hover
     color: blue; }
   #tiki-installer .nav .nav-item.active .nav-link {
     color: blue; }
+  #tiki-installer .install-step8 .enter-tiki .btn {
+    white-space: normal; }
 
 #tiki-admin_oauthserver input[name="id"][value=''] ~ .form-group-client_id, #tiki-admin_oauthserver input[name="id"][value=''] ~ .form-group-client_secret {
   display: none; }
