--- a/themes/base_files/scss/_tiki-installer.scss
+++ b/themes/base_files/scss/_tiki-installer.scss
@@ -65,4 +65,8 @@
             }
         }
     }
+
+    .install-step8 .enter-tiki {
+        .btn { white-space: normal; }
+    }
 }
